--- a/projectGIS.html
+++ b/projectGIS.html
@@ -10,7 +10,7 @@
     <nav>
         <div class="nav-container">
             <div class="nav-links">
-                <a href="portfolio.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="projectGIS.html">GIS Projects</a>
                 <a href="projectUX.html">UX Projects</a>
             </div>
