--- a/projectUX.html
+++ b/projectUX.html
@@ -10,7 +10,7 @@
     <nav>
         <div class="nav-container">
             <div class="nav-links">
-                <a href="portfolio.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="projectGIS.html">GIS Projects</a>
                 <a href="projectUX.html">UX Projects</a>
             </div>
@@ -19,9 +19,8 @@
 
     <section class="project-section">
         <div class="project-image">
-            <video width="420" height="240" autoplay muted>
+            <video width="1200" height="500" autoplay muted>
                 <source src="./assets/prototype.webm" type="video/webm">
-              Your browser does not support the video tag.
               </video>
         </div>
         <div class="project-content">
