--- a/projectGIS.html
+++ b/projectGIS.html
@@ -43,7 +43,7 @@
 
     <section class="project-section2">
         <div class="project-image2">
-            <img src="./assets/gtfs.png" alt="transit system">
+            <img src="./assets/Lindsaytransit.mp4" alt="transit system">
         </div>
         <div class="project-content2">
             <h2>Transit network for Lindsay</h2>
