--- a/projectGIS.html
+++ b/projectGIS.html
@@ -43,7 +43,9 @@
 
     <section class="project-section2">
         <div class="project-image2">
-            <img src="./assets/Lindsaytransit.mp4" alt="transit system">
+            <video width="auto" height="auto" autoplay muted>
+                <source src="./assets/Lindsaytransit.mp4" type="video/mp4">
+              </video>
         </div>
         <div class="project-content2">
             <h2>Transit network for Lindsay</h2>
