--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <section id="Education">
         <div class="contact-form">
-            <h2>What worked well?</h2>
+            <h2>What I know </h2>
             <table class="styled-table">
                 <thead>
                     <tr>
