--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
             <h2>About Me</h2>
             <h3>Hello all, let's dive into GIS and UX!</h3>
             <p>
-                GIS isn't just a field of study for me—it's a way to make a difference. I've always been fascinated by the power of location data to reveal patterns, solve problems, and improve lives. Whether it's mapping accessibility, planning smarter cities, or visualizing environmental change, I believe GIS has the ability to bring clarity to complex challenges and drive meaningful action.
+                GIS isn't just a field of study for me, it's a way to make a difference. I've always been fascinated by the power of location data to reveal patterns, solve problems, and improve lives. Whether it's mapping accessibility, planning smarter cities, or visualizing environmental change, I believe GIS has the ability to bring clarity to complex challenges and drive meaningful action.
             </p>
             <p>
                 One of my most rewarding projects was GeoConnect Prince Edward County (PEC), where I used spatial trend analysis and multi-criteria decision-making to help identify suitable housing sites. Seeing how data-driven insights could support urban planning and impact real communities deepened my passion for using GIS to create solutions that truly matter.
             </p>
             <p>
-                At Wipro Technologies, I worked with enterprise GIS applications and infrastructure mapping, gaining hands-on experience in large-scale geospatial solutions. It was here that I learned the importance of designing GIS tools that aren't just functional, but also accessible and user-friendly—ensuring that those who rely on spatial data can make informed decisions with ease.
+                At Wipro Technologies, I worked with enterprise GIS applications and infrastructure mapping, gaining hands-on experience in large-scale geospatial solutions. It was here that I learned the importance of designing GIS tools that aren't just functional, but also accessible and user-friendly ensuring that those who rely on spatial data can make informed decisions with ease.
             </p>
             <p>
                 More recently, I've been exploring UX in GIS through my volunteer role with BeSpatial Ontario as a Web Designer. By applying UX research and data-driven insights, I'm working to make GIS applications more intuitive, bridging the gap between technology and human experience. <em>Because at its core, GIS isn't just about data—it's about people.</em>
