--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 At Wipro Technologies, I worked with enterprise GIS applications and infrastructure mapping, gaining hands-on experience in large-scale geospatial solutions. It was here that I learned the importance of designing GIS tools that aren't just functional, but also accessible and user-friendly ensuring that those who rely on spatial data can make informed decisions with ease.
             </p>
             <p>
-                More recently, I've been exploring UX in GIS through my volunteer role with BeSpatial Ontario as a Web Designer. By applying UX research and data-driven insights, I'm working to make GIS applications more intuitive, bridging the gap between technology and human experience. <em>Because at its core, GIS isn't just about data—it's about people.</em>
+                More recently, I've been exploring UX in GIS through my volunteer role with BeSpatial Ontario as a Web Designer. By applying UX research and data-driven insights, I'm working to make GIS applications more intuitive, bridging the gap between technology and human experience. <em>Because at its core, GIS isn't just about data it's about people.</em>
             </p>
             <p>
                 Every map tells a story, every dataset has a human impact, and that's what drives my passion for this field. As I continue my journey, I'm excited to learn, collaborate, and contribute to projects that make spatial data more meaningful, accessible, and impactful.
