--- a/quinte.html
+++ b/quinte.html
@@ -43,7 +43,7 @@
     <!-- Historical Air Photo Digitization Project -->
     <section class="project-section" aria-label="Historical Air Photo Digitization project">
         <div class="project-image">
-            <img src="./assets/Airphoto.png" alt="Historical Air Photo Digitization arcGIS pro">
+            <img src="./assets/Airphoto.PNG" alt="Historical Air Photo Digitization arcGIS pro">
         </div>
         <div class="project-image">
             <img src="./assets/Airphoto2.gif" alt="Historical Air Photo Digitization project showing georeferenced aerial photographs and mapping interface">
