--- a/projectGIS.html
+++ b/projectGIS.html
@@ -73,6 +73,36 @@
             </a>
         </div>
     </section>
+    <!-- Story Map Section -->
+    <section class="project-section" aria-label="Professional Story Map project">
+        <div class="project-image">
+            <div class="story-map-preview" onclick="openStoryMap()">
+                <iframe 
+                    src="https://storymaps.arcgis.com/stories/8d67ac492dba477e9471bae40a25bfc4" 
+                    class="story-map-iframe"
+                    title="Professional Story Map Preview">
+                </iframe>
+                <div class="story-map-overlay">
+                    <div class="view-story-badge">View Interactive Story Map</div>
+                </div>
+            </div>
+        </div>
+        <div class="project-content">
+            <h2>Professional Story Map Portfolio</h2>
+            <p>
+                This interactive story map showcases my professional journey and technical expertise in GIS and spatial analysis. Through compelling narrative design combined with dynamic mapping elements, I've created an immersive experience that demonstrates my ability to communicate complex geospatial concepts to diverse audiences.
+            </p>
+            <p>
+                The story map integrates multiple data sources, interactive visualizations, and thoughtful cartographic design to tell a cohesive professional narrative. This project highlights my proficiency with ArcGIS StoryMaps platform and my understanding of how to effectively combine storytelling with spatial data to create engaging, informative experiences.
+            </p>
+            <p>
+                Building this story map reinforced my appreciation for user-centered design in GIS applications and the importance of accessible, intuitive interfaces in communicating spatial information to both technical and non-technical audiences.
+            </p>
+            <a href="https://storymaps.arcgis.com/stories/8d67ac492dba477e9471bae40a25bfc4" target="_blank" rel="noopener noreferrer">
+                <button class="project-button" aria-label="View full story map">View Full Story Map</button>
+            </a>
+        </div>
+    </section>
 
     <!-- Simple Maps Carousel -->
     <section class="project-section3" aria-label="Collection of simple maps from first semester">
