--- a/projectGIS.html
+++ b/projectGIS.html
@@ -66,7 +66,7 @@
                 I gained hands-on experience in web GIS development, GTFS data management, data relationships, and transit system visualization, all while learning how to address technical challenges through documentation and troubleshooting.
             </p>
             <p class="project-credit">
-                <em>Project developed in collaboration with Helen Plesko.</em>
+                <em>Project developed in collaboration with Fleming College Group.</em>
             </p>
             <a href="https://helenplesko.github.io/web2lindsaytransit/" target="_blank" rel="noopener noreferrer">
                 <button class="project-button" aria-label="Learn more about Lindsay Transit project">Learn More</button>
@@ -91,12 +91,6 @@
             <h2>Professional Story Map Portfolio</h2>
             <p>
                 This interactive story map showcases my professional journey and technical expertise in GIS and spatial analysis. Through compelling narrative design combined with dynamic mapping elements, I've created an immersive experience that demonstrates my ability to communicate complex geospatial concepts to diverse audiences.
-            </p>
-            <p>
-                The story map integrates multiple data sources, interactive visualizations, and thoughtful cartographic design to tell a cohesive professional narrative. This project highlights my proficiency with ArcGIS StoryMaps platform and my understanding of how to effectively combine storytelling with spatial data to create engaging, informative experiences.
-            </p>
-            <p>
-                Building this story map reinforced my appreciation for user-centered design in GIS applications and the importance of accessible, intuitive interfaces in communicating spatial information to both technical and non-technical audiences.
             </p>
             <a href="https://storymaps.arcgis.com/stories/8d67ac492dba477e9471bae40a25bfc4" target="_blank" rel="noopener noreferrer">
                 <button class="project-button" aria-label="View full story map">View Full Story Map</button>
