--- a/projectGIS.html
+++ b/projectGIS.html
@@ -154,21 +154,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous">
     
     <!-- Main JavaScript -->
-   <script>
-        // Function to open story map in new window
-        function openStoryMap() {
-            window.open('https://storymaps.arcgis.com/stories/8d67ac492dba477e9471bae40a25bfc4', '_blank', 'noopener,noreferrer');
-        }
-
+  <script>
         // DOM Content Loaded
         document.addEventListener('DOMContentLoaded', function() {
             initializeGISProjects();
+            handleStoryMapLoading();
         });
 
         function initializeGISProjects() {
             setupSmoothScrolling();
             setupScrollAnimations();
             setupCarousel();
+        }
+
+        // Handle story map loading
+        function handleStoryMapLoading() {
+            const storyMapIframe = document.querySelector('.story-map-iframe');
+            const loadingText = document.querySelector('.story-map-loading');
+            
+            if (storyMapIframe && loadingText) {
+                storyMapIframe.addEventListener('load', function() {
+                    loadingText.style.display = 'none';
+                });
+            }
         }
 
         // Smooth scrolling for navigation links
