--- a/projectGIS.html
+++ b/projectGIS.html
@@ -74,17 +74,17 @@
         </div>
     </section>
     <!-- Story Map Section -->
+    <!-- Story Map Section -->
     <section class="project-section" aria-label="Professional Story Map project">
         <div class="project-image">
-            <div class="story-map-preview" onclick="openStoryMap()">
+            <div class="story-map-container">
+                <div class="story-map-loading">Loading Story Map...</div>
                 <iframe 
                     src="https://storymaps.arcgis.com/stories/8d67ac492dba477e9471bae40a25bfc4" 
                     class="story-map-iframe"
-                    title="Professional Story Map Preview">
+                    title="Professional Story Map - Interactive Experience"
+                    loading="lazy">
                 </iframe>
-                <div class="story-map-overlay">
-                    <div class="view-story-badge">View Interactive Story Map</div>
-                </div>
             </div>
         </div>
         <div class="project-content">
@@ -93,10 +93,11 @@
                 This interactive story map showcases my professional journey and technical expertise in GIS and spatial analysis. Through compelling narrative design combined with dynamic mapping elements, I've created an immersive experience that demonstrates my ability to communicate complex geospatial concepts to diverse audiences.
             </p>
             <a href="https://storymaps.arcgis.com/stories/8d67ac492dba477e9471bae40a25bfc4" target="_blank" rel="noopener noreferrer">
-                <button class="project-button" aria-label="View full story map">View Full Story Map</button>
+                <button class="project-button" aria-label="Open story map in full screen">View in Full Screen</button>
             </a>
         </div>
     </section>
+
 
     <!-- Simple Maps Carousel -->
     <section class="project-section3" aria-label="Collection of simple maps from first semester">
