--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </tr>
                     <tr>
                         <td>GIS Application Specialist</td>
-                        <td>September 2023 – June 2024</td>
+                        <td>September 2023 - June 2024</td>
                         <td>Fleming College, Lindsay, ON</td>
                     </tr>
                     <tr>
