--- a/quinte.html
+++ b/quinte.html
@@ -242,7 +242,7 @@
                         </p>
                     </div>
 
-                    <a href="[YOUR_STORY_MAP_URL_HERE]" target="_blank" rel="noopener noreferrer">
+                    <a href="https://storymaps.arcgis.com/stories/a7372bb82f594f3b94e0ea194fa7978d" target="_blank" rel="noopener noreferrer">
                         <button class="project-button" aria-label="Open database management story map in full screen">View Story Map in Full Screen</button>
                     </a>
                 </div>
@@ -457,3 +457,4 @@
     </script>
 </body>
 </html>
+
