--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rahul Saravanabavan - GIS Application Specialist and UX Designer Portfolio">
+    <meta name="description" content="Rahul Saravanabavan - GIS Application Specialist and UX Design Portfolio">
     <meta name="keywords" content="GIS, UX Design, Geospatial, Portfolio, Mapping, User Experience">
     <meta name="author" content="Rahul Saravanabavan">
-    <title>Rahul Saravanabavan - GIS & UX Portfolio</title>
+    <title>Rahul Saravanabavan - Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 </head>
 <body>
     <nav role="navigation" aria-label="Main navigation">
@@ -188,3 +187,4 @@
     </script>
 </body>
 </html>
+
