--- a/projectGIS.html
+++ b/projectGIS.html
@@ -191,7 +191,7 @@
                 <iframe 
                     src="https://storymaps.arcgis.com/stories/8d67ac492dba477e9471bae40a25bfc4" 
                     class="story-map-iframe"
-                    title="Professional Story Map - Interactive Experience"
+                    title="Story Map - Portfolio"
                     loading="lazy">
                 </iframe>
             </div>
@@ -410,3 +410,4 @@
     </script>
 </body>
 </html>
+
